# ifc2rdfTool

./: .gitignore  .pylintrc  Makefile  README.md  main.spec  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: pipeline.yml
ifc2rdfApp/: README.md  ifc2rdfApp.py  main.py
ifc2rdftool/: building_info.py  door_info.py  graph_resources.py  ifc2rdf_tool.py  roof_info.py  site_info.py  slab_info.py  space_info.py  storey_info.py  wall_info.py  windows_info.py
ontologies/external_ontologies/beo/: beo.ttl
ontologies/external_ontologies/container/: container.ttl
ontologies/external_ontologies/linkset/: linkset.ttl
ontologies/external_ontologies/mep/: mep.ttl
ontologies/tool_ontologies/: BLCS Framework_v0.5.ttl  Lifecycle_v0.5.ttl
resources/IFC_files/: simple_ifc_creation.ifc
resources/rdf_graphs/: Demonstration_Model_V1_DTV_4.ttl  Demonstration_Model_V1_RV_4.ttl  DigitalHub_FM-HZG_v2.ttl  DigitalHub_FM-LFT_v2.ttl  ifc_sample.ttl  simple_ifc_creation.ttl
tests/: test_ifc2rdf_tool.py
tests/integration_test/: test_door_info.py  test_ifc2rdf_tool.py  test_slab_info.py  test_wall_info.py  test_windows_info.py
tests/test_resources/: Demonstration_Model_V1_DTV_4.ifc  test_door_constituent.ttl  test_graph.ttl  test_graph2.ttl  test_slab_layer.ttl  test_storey.ttl  test_wall_graph.ttl  test_window_constituent.ttl
tests/unit_test/: test_building_info.py  test_door_info.py  test_ifc2rdf_tool.py  test_roof_info.py  test_site_info.py  test_slab_info.py  test_space_info.py  test_storey_info.py  test_wall_info.py  test_windows_info.py
(+29 files in other folders)
