[tool.poetry]
name = "ifc2rdftool"
version = "0.1.0"
description = ""
authors = ["Janakiram Karlpudi <janakiramkarlapudi841@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ifcopenshell = "^0.7.0.231218"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
