[tool.poetry]
name = "ifc2rdftool"
version = "0.1.0"
description = ""
authors = ["Janakiram Karlpudi <janakiramkarlapudi841@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ifcopenshell = "^0.7.0.231218"
pytest = "^7.4.3"
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.0.3"
lark = "^1.1.8"
pyshacl = "^0.25.0"
rdflib = "^7.0.0"
icecream = "^2.1.3"
flet = "^0.18.0"
pyinstaller = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
